[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Images/temporary-farmer-clipart.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13, 44.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "test",
"speed": 5.0
} ]

[node name="Player" type="Area2D" groups=["player"]]
script = ExtResource( 1 )

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2( -9, 0.5 )
shape = SubResource( 1 )

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.075, 0.075 )
frames = SubResource( 2 )
animation = "test"

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 2048
limit_bottom = 2048
limit_smoothed = true
smoothing_enabled = true
drag_margin_left = 0.4
drag_margin_top = 0.3
drag_margin_right = 0.4
drag_margin_bottom = 0.3
editor_draw_drag_margin = true

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
